--- a/form.html
+++ b/form.html
@@ -22,7 +22,7 @@
         <label >Do you Excercise at home ?</label>
         <input type="radio" name="val" value="Yes" id="yes">
         <label for="yes">Yes</label>
-        <input type="radio" name="vals" value="No" id="No">
+        <input type="radio" name="val" value="No" id="No">
         <label for="No">No</label>
         <br><br>
         <label>How do you like to read about your topics ?</label>
