--- a/form.html
+++ b/form.html
@@ -27,8 +27,8 @@
         <br><br>
         <label>How do you like to read about your topics ?</label>
         <br>
-        <input type="checkbox" name="opt1" id="books" value="books">
-        <label for="books">Books</label>
+        <input type="checkbox" name="opt1" id="book" value="books">
+        <label for="book">Books</label>
         <input type="checkbox" name="opt2" id="online" value="OnlineResources">
         <label for="online">Online Resources</label>
         <input type="checkbox" name="opt3" id="phone" value="PhoneApps">
