--- a/ex3.html
+++ b/ex3.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <table>
-        <span>This is Survey <a href="./form.html">Form</a></span>
-        <br><br>
+<!--         <span>This is Survey <a href="./form.html">Form</a></span>
+ -->        <br><br>
         <thead>
             <tr>
                 <th>Name</th>
